[gd_scene load_steps=34 format=3 uid="uid://dxoyhhainhhyv"]

[ext_resource type="Texture2D" uid="uid://c4vi5kl203eb1" path="res://assets/Textures/vilrink/AdventureCharacter_Spreadsheet.png" id="1_knk32"]
[ext_resource type="Script" path="res://Scripts/Other/player.gd" id="1_wpvhi"]
[ext_resource type="PackedScene" uid="uid://cod64obpin5x0" path="res://Scenes/UIs/UI.tscn" id="3_7eor7"]
[ext_resource type="AudioStream" uid="uid://bbx8ialkoaj3n" path="res://assets/Sound/SFX/tommusic/Free Fantasy SFX Pack By TomMusic/Free Fantasy SFX Pack By TomMusic/OGG Files/SFX/Footsteps/Stone/Stone Run 1.ogg" id="4_cb8e3"]
[ext_resource type="AudioStream" uid="uid://bdxdb2dl0dt83" path="res://assets/Sound/SFX/tommusic/Free Fantasy SFX Pack By TomMusic/Free Fantasy SFX Pack By TomMusic/OGG Files/SFX/Footsteps/Stone/Stone Walk 3.ogg" id="5_ix00a"]
[ext_resource type="AudioStream" uid="uid://c6cttbbiovaci" path="res://assets/Sound/SFX/tommusic/Free Fantasy SFX Pack By TomMusic/Free Fantasy SFX Pack By TomMusic/OGG Files/SFX/Footsteps/Stone/Stone Jump.ogg" id="6_0grft"]
[ext_resource type="AudioStream" uid="uid://csib2d1n21dp8" path="res://assets/Sound/SFX/tommusic/Free Fantasy SFX Pack By TomMusic/Free Fantasy SFX Pack By TomMusic/OGG Files/SFX/Footsteps/Stone/Stone Land.ogg" id="7_lj7b5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o20ky"]
atlas = ExtResource("1_knk32")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k46g"]
atlas = ExtResource("1_knk32")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob176"]
atlas = ExtResource("1_knk32")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d5v4"]
atlas = ExtResource("1_knk32")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d7uj"]
atlas = ExtResource("1_knk32")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1nap"]
atlas = ExtResource("1_knk32")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i05t5"]
atlas = ExtResource("1_knk32")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdvbs"]
atlas = ExtResource("1_knk32")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg2gx"]
atlas = ExtResource("1_knk32")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31vrx"]
atlas = ExtResource("1_knk32")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqyn6"]
atlas = ExtResource("1_knk32")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i107s"]
atlas = ExtResource("1_knk32")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o2xw"]
atlas = ExtResource("1_knk32")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc12i"]
atlas = ExtResource("1_knk32")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo5kc"]
atlas = ExtResource("1_knk32")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fimr"]
atlas = ExtResource("1_knk32")
region = Rect2(0, 672, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfq85"]
atlas = ExtResource("1_knk32")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw8hr"]
atlas = ExtResource("1_knk32")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1bhn"]
atlas = ExtResource("1_knk32")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh8gm"]
atlas = ExtResource("1_knk32")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_no7en"]
atlas = ExtResource("1_knk32")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ujhc"]
atlas = ExtResource("1_knk32")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lclj"]
atlas = ExtResource("1_knk32")
region = Rect2(144, 672, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_sgrli"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o20ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k46g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob176")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d5v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d7uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1nap")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i05t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdvbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg2gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31vrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqyn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i107s")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o2xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc12i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo5kc")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fimr")
}],
"loop": false,
"name": &"slide",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfq85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw8hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1bhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh8gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no7en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ujhc")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lclj")
}],
"loop": false,
"name": &"wall",
"speed": 1.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yakbs"]
radius = 4.5
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t0wn5"]
radius = 1.28565

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
floor_constant_speed = true
floor_snap_length = 5.0
script = ExtResource("1_wpvhi")
metadata/_edit_horizontal_guides_ = [19.0]
metadata/_edit_vertical_guides_ = [-194.0]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sgrli")
animation = &"idle"
autoplay = "idle"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_yakbs")
debug_color = Color(0, 0.618333, 0.7, 0.419608)

[node name="Checkpoint_Hitbox" type="Area2D" parent="Hitbox"]
position = Vector2(0, -1)
collision_mask = 256
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Checkpoint_Hitbox"]
position = Vector2(0, 1)
scale = Vector2(1.1, 1.1)
shape = SubResource("CircleShape2D_t0wn5")
debug_color = Color(0.7, 0.653333, 0, 0.286275)

[node name="Death_Hitbox" type="Area2D" parent="Hitbox"]
show_behind_parent = true
position = Vector2(0, -1)
collision_mask = 8
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Death_Hitbox"]
position = Vector2(0, 1)
scale = Vector2(1.1, 1.1)
shape = SubResource("CapsuleShape2D_yakbs")
debug_color = Color(0.7, 0, 0, 0.286275)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
process_callback = 0
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.25
drag_right_margin = 0.25
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="UI" parent="Camera2D" instance=ExtResource("3_7eor7")]

[node name="SFX" type="Node2D" parent="."]

[node name="Walk" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_cb8e3")
bus = &"SFX - Player"

[node name="Crouch" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_ix00a")
bus = &"SFX - Player"

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_0grft")
bus = &"SFX - Player"

[node name="Land" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_lj7b5")
bus = &"SFX - Player"
area_mask = 2

[node name="Timers" type="Node2D" parent="."]

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="MovementTimer" type="Timer" parent="Timers"]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hitbox/Checkpoint_Hitbox" to="." method="_on_checkpoint_hitbox_area_entered"]
[connection signal="area_entered" from="Hitbox/Death_Hitbox" to="." method="_on_death_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox/Death_Hitbox" to="." method="_on_death_hitbox_body_entered"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timers/MovementTimer" to="." method="_on_movement_timer_timeout"]
